Applications/droneci/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: drone-web
  namespace: droneci
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ci.lab.markaplay.net`)
      kind: Rule
      services:
      - name: drone
        port: 80
  tls:
    secretName: drone-cert
